@@ -60,6 +60,22 @@ end_import
 
 begin_import
 import|import
+name|com
+operator|.
+name|github
+operator|.
+name|benmanes
+operator|.
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|Caffeine
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -198,18 +214,6 @@ name|Test
 import|;
 end_import
 
-begin_import
-import|import
-name|com
-operator|.
-name|googlecode
-operator|.
-name|concurrentlinkedhashmap
-operator|.
-name|ConcurrentLinkedHashMap
-import|;
-end_import
-
 begin_class
 DECL|class|BlockDirectoryTest
 specifier|public
@@ -236,24 +240,26 @@ index|[]
 argument_list|>
 name|map
 init|=
-operator|new
-name|ConcurrentLinkedHashMap
+name|Caffeine
 operator|.
-name|Builder
-argument_list|<
-name|String
-argument_list|,
-name|byte
-index|[]
-argument_list|>
+name|newBuilder
 argument_list|()
 operator|.
-name|maximumWeightedCapacity
+name|maximumSize
 argument_list|(
 literal|8
 argument_list|)
 operator|.
+operator|<
+name|String
+decl_stmt|,
+name|byte
+index|[]
+decl|>
 name|build
+argument_list|()
+decl|.
+name|asMap
 argument_list|()
 decl_stmt|;
 annotation|@
@@ -1041,24 +1047,26 @@ name|mapperCache
 operator|.
 name|map
 operator|=
-operator|new
-name|ConcurrentLinkedHashMap
+name|Caffeine
 operator|.
-name|Builder
-argument_list|<
-name|String
-argument_list|,
-name|byte
-index|[]
-argument_list|>
+name|newBuilder
 argument_list|()
 operator|.
-name|maximumWeightedCapacity
+name|maximumSize
 argument_list|(
-literal|10000
+literal|10_000
 argument_list|)
 operator|.
+operator|<
+name|String
+operator|,
+name|byte
+index|[]
+operator|>
 name|build
+argument_list|()
+operator|.
+name|asMap
 argument_list|()
 expr_stmt|;
 name|testRandomAccessWrites
